# BDS_Engine

./: .gitignore  ENGINE_MODULE_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  PHAM_BLOCKCHAIN_SIGNATURE.md  README.md  README_VERIFICATION.md  UNSOLVED_PROBLEMS_ENGINE_FRAMEWORK.md  requirements.txt  run_depression_simulation.py  run_simulation.py  test_research_modules.py
Boundary_Convergence_Engine/: .gitignore  APPLICABLE_PROBLEMS_ANALYSIS.md  CAUSAL_ANALYSIS_PHILOSOPHY.md  DEPLOYMENT_STATUS.md  ENGINE_EXPLANATION.md  FINAL_CHECKLIST.md  GITHUB_UPLOAD_GUIDE.md  INDEPENDENT_DEPLOYMENT_ANALYSIS.md  INTEGRATION_WITH_DYNAMICS.md  NAVIER_STOKES_APPLICATION.md  PHAM_BLOCKCHAIN_LOG.md  PRACTICAL_APPLICATION_GUIDE.md  PYPI_DEPLOYMENT_GUIDE.md  README.md  SUMMARY_APPLICABLE_PROBLEMS.md  THREE_BODY_APPLICATION.md  USAGE_EXAMPLES.md  YANG_MILLS_APPLICATION.md  pyproject.toml  requirements.txt  setup.py
Boundary_Convergence_Engine/src/boundary_convergence_engine/: __init__.py  boundary_convergence_engine.py  boundary_generator.py  config.py  convergence_controller.py  density_estimator.py  mismatch_calculator.py  models.py  refinement_loop.py
Unsolved_Problems_Engines/: README.md  STORYLINE_EXAMPLE_SCENARIOS.md  STORYLINE_LAYER_DESIGN.md
Unsolved_Problems_Engines/StateManifoldEngine/: README.md
Unsolved_Problems_Engines/ThreeBodyBoundaryEngine/: .gitignore  CHANGELOG.md  COMMENT_CONCEPT_REVIEW.md  EXPERIMENTAL_STATUS.md  FEEDBACK_ANALYSIS_2026-02-03.md  FILE_LOCATION_GUIDE.md  FINAL_STATUS_REPORT.md  NEXT_STEPS_2026-02-03.md  NEXT_WORK_CHECKLIST.md  QUICK_ACCESS.md  (+16 more)
docs/: IMPLEMENTATION_PLAN.md
(+55 files in other folders)
