[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boundary-convergence-engine"
version = "1.0.0"
description = "Boundary Convergence Engine - 경계-공간 정합 계수 (Boundary-Space Alignment Coefficient)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GNJz (Qquarts)"}
]
keywords = [
    "boundary convergence",
    "space filling",
    "cognitive modeling",
    "geometric modeling",
    "mathematical modeling",
    "boundary-space alignment",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://github.com/gnjz/boundary-convergence-engine"
Source = "https://github.com/gnjz/boundary-convergence-engine"
Tracker = "https://github.com/gnjz/boundary-convergence-engine/issues"

